<resources>
    <string name="app_name">DynamicAgents</string>
    <string name="action_settings">Settings</string>
    <string name="prefs_string">dynamic_agents_prefs</string>
    <string name="remember_pin_string">Remember the PIN</string>
    <string name="vehicle_pin_string">Vehicle PIN</string>
    <string name="vehicle_id_string">Vehicle ID</string>
    <string name="server_port_string">Server Port</string>
    <string name="server_url_string">Server URL</string>
    <string name="done_string">Done</string>
    <string name="cancel_string">cancel</string>
    <string name="rvi_test2_default_url">http://rvi-test2.nginfotpdx.net</string>
    <string name="rvi_test2_default_port">8000</string>
</resources>
