<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.jaguarlandrover.dynamicagents.SettingsActivity">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <GridLayout
        android:id="@+id/server_and_vehicle_settings_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4">

        <TextView
            android:id="@+id/server_url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingStart="@dimen/paddingRight"
            android:paddingEnd="@dimen/paddingRight"
            android:text="@string/server_url_string"/>

        <EditText
            android:id="@+id/server_url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingBottom="@dimen/paddingBottom"
            android:paddingStart="@dimen/paddingLeft"
            android:paddingEnd="@dimen/paddingRight"
            android:paddingTop="@dimen/paddingTop"
            android:imeOptions="actionDone"
            android:inputType="textUri"/>

        <TextView
            android:id="@+id/server_port_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingStart="@dimen/paddingRight"
            android:paddingEnd="@dimen/paddingRight"
            android:text="@string/server_port_string"/>

        <EditText
            android:id="@+id/server_port_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingBottom="@dimen/paddingBottom"
            android:paddingStart="@dimen/paddingLeft"
            android:paddingEnd="@dimen/paddingRight"
            android:paddingTop="@dimen/paddingTop"
            android:imeOptions="actionDone"
            android:inputType="number"/>

        <TextView
            android:id="@+id/vehicle_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingStart="@dimen/paddingRight"
            android:paddingEnd="@dimen/paddingRight"
            android:text="@string/vehicle_id_string"/>

        <EditText
            android:id="@+id/vehicle_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingBottom="@dimen/paddingBottom"
            android:paddingStart="@dimen/paddingLeft"
            android:paddingEnd="@dimen/paddingRight"
            android:paddingTop="@dimen/paddingTop"
            android:imeOptions="actionDone"
            android:inputType="text"/>

        <TextView
            android:id="@+id/vehicle_pin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingStart="@dimen/paddingRight"
            android:paddingEnd="@dimen/paddingRight"
            android:text="@string/vehicle_pin_string"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/vehicle_pin_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_marginTop="@dimen/marginTop"
            android:paddingBottom="@dimen/paddingBottom"
            android:paddingStart="@dimen/paddingLeft"
            android:paddingEnd="@dimen/paddingRight"
            android:paddingTop="@dimen/paddingTop"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:visibility="gone"/>

    </GridLayout>


    <Switch
        android:id="@+id/remember_pin_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/server_and_vehicle_settings_grid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/light_grey_button_small"
        android:text="@string/remember_pin_string"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/marginBottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/settings_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginRight"
            android:background="@drawable/black_button_small"
            android:onClick="settingsSubmitButtonClicked"
            android:text="@string/done_string"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/settings_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button_small"
            android:onClick="settingsCancelButtonClicked"
            android:text="@string/cancel_string"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
